Finish the functionality of adding collaborators
This solved #71.